feat(top-dishes): the previous section is very similar to this one, added a heart icon instead of favorites and also just pulled the js code of the previous section onto this one

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -26,8 +26,9 @@
 
   /* Зеленые */
   --color-dark-green: #005128;
-  --color-green: #00B67A;
-  --color-light-green: #3DE25C;
+  --color-green: #309D5B;
+  --color-light-green: #5acf89;
+  --color-extra-light-green: #a2f8b2;
 
   /* Красные/Розовые */
   --color-red: #EB3F5E;
