feat(purchases): made logic for clicking on a drop-down list of elements and adapted this section for different devices

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -12,6 +12,7 @@
   --color-medium-gray: #606060;
   --color-ml-gray: #7f7e7e;
   --color-light-gray: #CBCBCB;
+  --color-el-gray: #FAFAFA;
   --color-extra-light-gray: #F7F7F7;
 
   /* Синие */
@@ -23,12 +24,14 @@
   /* Фиолетовые */
   --color-purple: #665AB5;
   --color-light-purple: #A596FF;
+  --color-extra-light-purple: #F4F0FF;
 
   /* Зеленые */
   --color-dark-green: #005128;
   --color-green: #309D5B;
   --color-light-green: #5acf89;
   --color-extra-light-green: #a2f8b2;
+  --color-el-green: #F2FDF6;
 
   /* Красные/Розовые */
   --color-red: #EB3F5E;
