feat(say): implementation of scroll card logic, one fixed/static on devices larger than mobile, and on mobile all scrollable

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -24,14 +24,14 @@
   /* Фиолетовые */
   --color-purple: #665AB5;
   --color-light-purple: #A596FF;
-  --color-extra-light-purple: #F4F0FF;
+  --color-extra-light-purple: #d8cbfc;
 
   /* Зеленые */
   --color-dark-green: #005128;
   --color-green: #309D5B;
   --color-light-green: #5acf89;
   --color-extra-light-green: #a2f8b2;
-  --color-el-green: #F2FDF6;
+  --color-el-green: #cafadc;
 
   /* Красные/Розовые */
   --color-red: #EB3F5E;
