feat(footer): recoloring social network icons on hover, rebuilding footer based on screen width

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -12,6 +12,7 @@
   --color-medium-gray: #606060;
   --color-ml-gray: #7f7e7e;
   --color-light-gray: #CBCBCB;
+  --color-dark-el-gray: #EAEAEA;
   --color-el-gray: #FAFAFA;
   --color-extra-light-gray: #F7F7F7;
 
